--- a/public/css/global.css
+++ b/public/css/global.css
@@ -3,12 +3,17 @@
 body {
     font-family: 'Poppins', sans-serif;
     font-size: 14px;
-    background-color: #FCFCFD;
 }
 a {
     text-decoration: none;
     color: #000;
     transition: all 0.3s;
+}
+a:hover {
+    color: #DC3545;
+}
+textarea:focus, input:focus{
+    outline: none;
 }
 .transition {
     transition: all 0.3s;
@@ -20,12 +25,35 @@ a {
     padding: 20px;
     background-color: #F8F9FA;
 }
+.topHeader .phone {
+    margin: 0 20px;
+}
+.topHeader .phone a,.topHeader .email a {
+    text-decoration: underline;
+}
 .account {
     display: flex;
     color: #000;
+    cursor: pointer;
 }
 .account .fullName {
     padding-left: 10px;
+    font-size: 13px;
+}
+.lang {
+    padding: 0;
+    margin-left: 25px;
+    margin-bottom: 0;
+}
+.lang li {
+    list-style: none;
+    display: inline-block;
+    margin-left: 8px;
+    font-weight: bold;
+    cursor: pointer;
+}
+.lang li.active {
+    color: #C30E0E;
 }
 .contentHeader {
     display: table;
@@ -36,21 +64,26 @@ a {
     display: table-cell;
     width: 250px;
 }
-.contentHeader .boxContact {
+.contentHeader .boxSearch {
     display: table-cell; 
-    width: 210px;
+    width: 250px;
     text-align: right;
 }
-.contentHeader .boxContact a {
-    background-color: #DC3545;
-    border-radius: 10px;
-    display: inline-block;
-    color: #fff;
-    font-size: 16px;
-    padding: 13px 57px;
+.contentHeader .boxSearch .searchBar {
+    position: relative;
 }
-.contentHeader .boxContact a:hover {
-    background-color: #b52b38;
+.contentHeader .boxSearch .searchBar .search {
+    height: 36px;
+    border-radius: 20px;
+    border: 1px solid;
+    text-indent: 10px;
+    width: 100%;
+}
+.contentHeader .boxSearch .searchBar i {
+    position: absolute;
+    right: 10px;
+    font-size: 20px;
+    top: 8px;
 }
 .contentHeader .boxMenu .menu {
     padding: 0;
@@ -77,13 +110,14 @@ a {
     cursor: pointer;
 }
 .mobile .boxMenuMobile {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: -300px;
     min-width: 300px;
     background: #3d3d3d;
     height: 100vh;
     padding: 15px;
+    z-index: 1;
 }
 .mobile .boxMenuMobile.show {
     left: 0 !important;
@@ -110,130 +144,239 @@ a {
     margin-bottom: 20px;
 }
 /* #################### jumbotron ############################ */
-.jumbotron .boxInfo {
-    display: table;
-    width: 100%;
-    height: 100%;
+.jumbotron {
+    background-image: url('../../public/image/9d995afdf01ffe6b80a994280ea7b125.jpg');
+    background-size: cover;
+    background-position: center;
+    height: 792px;
+    padding: 100px 0;
 }
-.jumbotron .boxInfo .info {
-    display: table-cell;
-    vertical-align: middle;
-}
-.jumbotron .info .title {
-    font-size: 40px;
-    color: #DC3545;
+.jumbotron .title {
+    color: #FFF;
+    font-size: 50px;
+    font-style: normal;
     font-weight: 700;
-    margin: 15px 0;
 }
-.jumbotron .info p {
-    font-size: 16px;
-    font-weight: 600;
-}
-/* ###################### registrationInfo ########################## */
-.registrationInfo {
-    padding: 50px 0;
-}
-.registrationInfo .title {
-    text-align: center;
-    font-size: 12px;
-    font-weight: 600;
-}
-.registrationInfo p {
-    text-align: center;
-    font-size: 12px;
-    font-weight: 400;
-}
-/* ###################### overView ########################## */
-.overView {
-    background: #fff;
-    padding: 100px 0 50px;
-}
-.overView .boxInfo {
-    display: table;
-    width: 100%;
-    height: 100%;
-}
-.overView .boxInfo .info {
-    display: table-cell;
-    vertical-align: middle;
-    padding: 20px 0;
-}
-.overView .boxInfo .info hr {
-    height: 4px;
-    border-radius: 4px;
-    background: #DC3545;
-    opacity: 1;
-    margin: 25px 0;
-}
-.overView .boxInfo .info .title {
-    font-size: 32px;
-    font-weight: 700;
-    text-transform: uppercase;
-}
-.overView .boxInfo .info p {
+.jumbotron p {
     font-size: 16px;
     font-weight: 400;
+    color: #FFF;
+    text-align: right;
+}
+.jumbotron .formBox {
+    border-radius: 10px;
+    background: rgba(248, 249, 250, 0.50);
+    backdrop-filter: blur(7.5px);
+    padding: 50px;
+    text-align: center;
+    margin-top: 50px;
+}
+.jumbotron .formBox .apply {
+    overflow: hidden;
+}
+.jumbotron .formBox .btnApply {
+    border-radius: 24px;
+    border: 2px solid var(--shading-white, #FFF);
+    background: var(--primary-red-500, #C30E0E);
+    display: block;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    text-align: center;
+    color: #fff;
+    padding: 16px;
+}
+.jumbotron .formBox .line {
+    display: inline-block;
+    margin: 30px;
+    font-size: 14px;
+    font-weight: bold;
+    position: relative;
+    color: #000;
+}
+.jumbotron .formBox .line:before {
+    position: absolute;
+    content: '';
+    height: 1px;
+    width: 500px;
+    background: #000;
+    right: 30px;
+    top: 11px;
+}
+.jumbotron .formBox .line:after {
+    position: absolute;
+    content: '';
+    height: 1px;
+    width: 500px;
+    background: #000;
+    left: 30px;
+    top: 11px;
+}
+.jumbotron .formBox input {
+    width: 100%;
+    height: 54px;
+    border-radius: 10px;
+    border: 1px solid #3c3c3c;
+    text-indent: 14px;
+    margin-bottom: 10px;
+}
+.jumbotron .formBox .btnTrackDocument {
+    width: 100%;
+    font-weight: 700;
+    border: 1px solid #c30e0e;
+    height: 54px;
+    border-radius: 15px;
+    color: #c30e0e;
 }
 /* ###################### ourServices ########################## */
 .ourServices {
     background: #fff;
     padding: 50px 0 85px;
 }
-.ourServices .title-m {
-    text-align: center;
+.ourServices .title {
     font-size: 32px;
     font-style: normal;
     font-weight: 600;
     color: #DC3545;
+    margin-bottom: 50px;
+    position: relative;
 }
-.ourServices .item {
+.ourServices .title i {
+    position: absolute;
+    height: 46px;
+    width: 46px;
+    text-align: center;
+    padding: 12px;
+    border: 2px solid;
+    border-radius: 50%;
+    font-size: 18px;
+    cursor: pointer;
+}
+.ourServices .title i:hover {
+    background: #DC3545;
+    color: #fff;
+    border-color: #DC3545;
+}
+.ourServices .title .fa-chevron-left {
+    right: 60px;
+}
+.ourServices .title .fa-chevron-right {
+    right: 0;
+}
+.ourServices .service {
     margin-bottom: 25px;
     position: relative;
 }
-.ourServices .item .boxTitle {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    padding: 10px;
-    display: table;
+.ourServices .service img {
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
 }
-.ourServices .item .boxTitle .title {
-    height: 100%;
-    background: #0000006b;
-    margin: 0;
-    border-radius: 10px;
-    display: table-cell;
-    vertical-align: middle;
-    color: #FFF;
-    text-align: center;
+.ourServices .service .name {
     font-size: 24px;
     font-style: normal;
     font-weight: 600;
-    line-height: normal;
+    background: #C30E0E;
+    color: #fff;
+    padding: 25px;
+    margin-bottom: 0;
 }
-.ourServices .item img {
-    padding: 10px;
+.ourServices .service .info {
+    padding: 0 30px;
+    border-top: none;
+    border: 1px solid #b5b5b5;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
 }
-.ourServices .item .boxName {
-    height: 416px;
-    padding: 10px;
+.ourServices .service .info li {
+    list-style: none;
+    padding: 20px 0;
+    border-bottom: 1px solid #bbbbbb;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
 }
-.ourServices .item .name {
-    height: 100%;
-    margin: 0;
-    display: table-cell;
-    text-align: center;
-    vertical-align: middle;
+.ourServices .service .info li:last-child {
+    border-bottom: none;
+}
+/* ###################### news ########################## */
+.news {
+    padding: 50px 0;
+}
+.news .newsBox {
+    padding: 50px;
+    border: 1px solid #bbb;
+    border-radius: 25px;
+}
+.news .title {
+    color: #9C0B0B;
     font-size: 32px;
     font-style: normal;
+    font-weight: 700;
+    margin-bottom: 50px;
+    text-transform: uppercase;
+}
+.news .main h4 {
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    margin: 30px 0;
+}
+.news p {
+    font-size: 16px;
+    font-weight: 400;
+}
+.newList li {
+    list-style: none;
+    border-bottom: 1px solid #bbb;
+    margin-bottom: 20px;
+}
+.newList li h5 {
+    margin-bottom: 20px;
+}
+.news .seeMore {
+    text-decoration: underline;
     font-weight: 600;
 }
-/* ###################### process ########################## */
-.process {
-    background-color: #F8F9FA;
+/* ###################### aboutUs ########################## */
+.aboutUs {
+    background: #fff;
+    padding: 100px 0 50px;
+}
+.aboutUs .boxInfo {
+    display: table;
+    width: 100%;
+    height: 100%;
+}
+.aboutUs .boxInfo .info {
+    display: table-cell;
+    vertical-align: middle;
+    padding: 20px 0;
+}
+.aboutUs .boxInfo .info .title {
+    font-size: 32px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #9C0B0B;
+    margin-bottom: 30px;
+}
+.aboutUs .boxInfo .info p {
+    font-size: 16px;
+    font-weight: 400;
+}
+.aboutUs .boxInfo .btnLearnMore {
+    background-color: #C30E0E;
+    border-radius: 25px;
+    display: inline-block;
+    color: #fff;
+    font-size: 16px;
+    padding: 13px 57px;
+    margin: 30px 0;
+}
+/* ###################### chooseUs ########################## */
+.chooseUs {
     padding: 100px 0;
 }
-.process .title {
+.chooseUs .title {
     text-align: center;
     font-family: Poppins;
     font-size: 32px;
@@ -243,227 +386,81 @@ a {
     text-transform: uppercase;
     margin-bottom: 50px;
 }
-/* ###################### location ########################## */
-.location {
-    padding: 100px 0;
-    background: #fff;
-}
-.location .selectLocation {
-    margin-bottom: 100px;
-    text-align: center;
-}
-.location .selectLocation .title {
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 600;
-    margin: 0;
-}
-.location .selectLocation p {
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    margin: 30px 0;
-}
-.location .selectLocation .form-select {
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 600;
-}
-.location .boxNation {
-    margin-bottom: 100px;
-}
-.location .boxNation .nation {
-    display: table;
-    width: 100%;
-    height: 100%;
-}
-.location .boxNation .nation .nationInfo {
-    display: table-cell;
-    vertical-align: middle;
-}
-.location .boxNation .nation .nationInfo .title {
+/* ###################### review ########################## */
+.review .title {
     font-size: 32px;
     font-style: normal;
     font-weight: 700;
+    color: #9C0B0B;
 }
-.location .boxNation .nation .nationInfo hr {
-    height: 4px;
-    border-radius: 4px;
-    background: #DC3545;
-    opacity: 1;
-    margin: 25px 0;
-}
-.location .boxNation .nation .nationInfo p {
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-}
-.location .boxNation .nation .nationInfo .readMore {
-    background-color: #DC3545;
-    border-radius: 10px;
-    display: inline-block;
-    color: #fff;
-    font-size: 16px;
-    padding: 13px 57px;
-    margin-bottom: 30px;
-}
-/* ###################### fee ########################## */
-.fee .item {
-    padding: 70px 30px 50px;
-    border-radius: 10px;
-    border: 1px solid #343A40;
-    overflow: hidden;
-    position: relative;
-    margin-bottom: 25px;
-}
-.fee .item.active {
-    border: 1px solid #DC3545;
-}
-.fee .item .topTitle {
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: #343A40;
-    width: 100%;
-    padding: 10px;
-    text-transform: uppercase;
-    text-align: center;
-    color: #fff;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 600;
-}
-.fee .item.active .topTitle {
-    background: #DC3545;
-}
-.fee .item .title {
-    font-size: 32px;
-    font-style: normal;
-    font-weight: 600;
-    text-transform: uppercase;
-}
-.fee .item label {
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 600;
-    margin: 15px 0 0px;
-}
-.fee .item .price {
-    color: #DC3545;
-    font-size: 40px;
-    font-style: normal;
-    font-weight: 600;
-}
-.fee .item p {
-    color: #2B8C6A;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 600;
-    margin: 24px 0;
-}
-.fee .item .boxInfo {
-    margin-bottom: 25px;
-}
-.fee .item .boxInfo .infoTitle {
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 600;
-}
-.fee .item .boxInfo .infoTitle i {
-    color: #2B8C6A;
-    margin-right: 5px;
-}
-.fee .item .boxInfo ul {
-    padding-left: 24px;
-}
-.fee .item .boxInfo ul li {
-    list-style: none;
-    line-height: 30px;
-}
-.fee .item .btnGetStarted {
-    display: block;
-    border: 2px solid #dc3545;
-    padding: 15px;
-    border-radius: 10px;
-    text-align: center;
-    color: #dc3545;
-    font-size: 17px;
-    font-style: normal;
-    font-weight: 600;
-}
-.fee .item.active .btnGetStarted {
-    color: #fff;
-    background: #dc3545;
-}
-/* ###################### workWithUs ########################## */
-.workWithUs {
-    background: #F8F9FA;
-    padding: 100px 0;
-    text-align: center;
-}
-.workWithUs .item {
-    margin-bottom: 20px;
-}
-.workWithUs .title {
-    font-size: 32px;
-    font-style: normal;
-    font-weight: 600;
-    margin-bottom: 70px;
-}
-.workWithUs img {
-    width: 140px;
-}
-.workWithUs h6 {
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 600;
-    margin: 30px 0;
-    line-height: 35px;
-}
-.workWithUs p { 
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 30px;
-}
-/* ###################### contact ########################## */
-.contact {
-    background: #FFF;
-    padding: 100px 0;
-}
-.contact .title {
-    text-align: center;
-    font-size: 32px;
-    font-style: normal;
-    font-weight: 600;
-    margin-bottom: 30px;
-}
-.contact input[type='text'] {
-    height: 50px;
-}
-.contact .form-check {
-    margin-bottom: 10px;
-}
-.contact label{
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-}
-.contact .checkBoxTitle {
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 600;
-    margin: 25px 0 5px;
-}
-.contact .sendContact {
-    background-color: #DC3545;
-    border-radius: 10px;
-    display: inline-block;
-    color: #fff;
-    font-size: 16px;
-    padding: 13px 100px;
-    border: none;
+.review .boxReview {
+    padding: 50px;
+    border: 1px solid #bbb;
+    border-radius: 25px;
     margin-top: 30px;
+}
+.review .boxReview  img {
+    width: 150px !important;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin: auto;
+    vertical-align: top;
+}
+.review .boxReview .name {
+    text-transform: uppercase;
+    font-size: 25px;
+    font-weight: 600;
+    margin-top: 25px;
+    text-align: center;
+}
+.review .boxReview .rating {
+    padding: 0;
+    margin-bottom: 30px;
+}
+.review .boxReview .rating li {
+    list-style: none;
+    display: inline-block;
+    color: #F8C700;
+}
+.review .boxReview .content {
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    position: relative;
+}
+.review .boxReview .content i {
+    position: absolute;
+    font-size: 30px;
+    color: #5c5c5c;
+}
+.review .boxReview .content .fa-quote-left {
+    left: -30px;
+    top: -5px;
+}
+.review .boxReview .content .fa-quote-right {
+    right: -30px;
+    bottom: -5px;
+}
+.review .slideReviewControl {
+    text-align: center;
+}
+.review .slideReviewControl .fa-solid {
+    color: #DC3545;
+    height: 46px;
+    width: 46px;
+    text-align: center;
+    padding: 12px;
+    border: 2px solid;
+    border-radius: 50%;
+    font-size: 18px;
+    cursor: pointer;
+    margin: 30px 5px;
+}
+.review .slideReviewControl .fa-solid:hover {
+    background: #DC3545;
+    color: #fff;
+    border-color: #DC3545;
 }
 /* ###################### footer ########################## */
 footer {
