--- a/public/css/global.css
+++ b/public/css/global.css
@@ -462,9 +462,230 @@ textarea:focus, input:focus{
     color: #fff;
     border-color: #DC3545;
 }
+/* ############################################################### */
+/* ###################### About Us page ########################## */
+/* ############################################################### */
+#aboutUs .banner {
+    position: relative;
+    height: 600px;
+    overflow: hidden;
+}
+#aboutUs .banner .boxVideo {
+    position: relative;
+}
+#aboutUs .banner .videoPC video {
+    transform: translatey(-20%);
+}
+#aboutUs .banner .bgBanner {
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 3400px 1100px 0 0;
+    border-color: #c30e0ec2 transparent transparent transparent;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+#aboutUs .banner .content i {
+    position: absolute;
+    color: #ffffffd6;
+    width: 60px;
+    height: 60px;
+    background: #ff0000b5;
+    text-align: center;
+    font-size: 30px;
+    border-radius: 50%;
+    padding: 15px;
+    cursor: pointer;
+    z-index: 1;
+    right: 21vw;
+    top: 15vw;
+    box-shadow: 0 0 10px #d7d7d7;
+}
+#aboutUs .banner .content {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+    color: #fff;
+}
+#aboutUs .banner .content h1 {
+    font-size: 64px;
+    font-style: normal;
+    font-weight: 700;
+    margin-top: 20vh;
+}
+#aboutUs .banner .content p {
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+}
+#aboutUs .banner .bannerMobile h1 {
+    font-size: 35px;
+    font-style: normal;
+    font-weight: 700;
+    margin-top: 50px;
+    color: #9C0B0B;
+}
+#aboutUs .banner .bannerMobile p {
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    margin: 30px 0;
+}
+#aboutUs .banner .bannerMobile .boxVideo {
+    margin-top: 80px;
+}
+#aboutUs .banner .bannerMobile video {
+    border-radius: 15px;
+}
+#aboutUs .banner .bannerMobile .boxVideo i {
+    position: absolute;
+    left: calc(50% - 25px);
+    top: calc(50% - 25px);
+    color: #ffffffd6;
+    width: 40px;
+    height: 40px;
+    background: #ff0000b5;
+    text-align: center;
+    font-size: 14px;
+    border-radius: 50%;
+    padding: 13px;
+    cursor: pointer;
+    z-index: 1;
+    box-shadow: 0 0 10px #d7d7d7;
+}
+/* ###################### exp ########################## */
+#aboutUs .exp {
+    padding-top: 100px;
+}
+#aboutUs .exp .title {
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #9C0B0B;
+}
+#aboutUs .exp .description {
+    margin: 30px 0;
+}
+#aboutUs .exp ul {
+    padding: 0;
+    margin-top: 40px;
+}
+#aboutUs .exp ul li {
+    list-style: none;
+    padding: 6px 0;
+}
+#aboutUs .exp ul li i {
+    color: #9C0B0B;
+    margin-right: 5px;
+}
+#aboutUs .exp .boxItem {
+    border: 1px solid #bbb;
+    padding: 30px;
+    text-align: center;
+    height: 300px;
+    border-radius: 20px;
+    margin-bottom: 25px;
+}
+#aboutUs .exp .boxItem img {
+    width: 65px;
+    height: 65px;
+    object-fit: contain;
+}
+#aboutUs .exp .boxItem h5 {
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    margin: 30px 0 10px;
+}
+/* ###################### ourService ########################## */
+#aboutUs .ourService {
+    padding-top: 100px;
+}
+#aboutUs .ourService .title {
+    color: #9C0B0B;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 700;
+    margin-bottom: 50px;
+}
+#aboutUs .ourService .box {
+    margin-bottom: 30px;
+}
+#aboutUs .ourService .box .boxtitle {
+    background: #D9D9D9;
+    padding: 15px 30px;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+    margin-bottom: 0;
+    text-transform: uppercase;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+}
+#aboutUs .ourService .box .list {
+    padding: 30px;
+    border: 1px solid #d9d9d9;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+}
+#aboutUs .ourService .box .list .item {
+    margin-bottom: 30px;
+}
+#aboutUs .ourService .box .list .subTitle strong {
+    color: #c30e0e;
+    text-decoration: underline;
+    margin-left: 10px;
+}
+#aboutUs .ourService .box .list p {
+    padding: 0 35px;
+}
 /* ###################### footer ########################## */
 footer {
-    padding: 100px 0;
-    background: #343A40;
+    padding: 50px 0;
+    background: #CF3E3E;
+    color: #fff;
+}
+footer .boxLogo {
+    margin-bottom: 30px;
+}
+footer .title {
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+footer ul {
+    padding: 0;
+    margin-bottom: 25px;
+}
+footer li {
+    list-style: none;
+}
+footer li a {
+    color: #fff !important;
+    display: block;
+    padding: 7px 0;
+    line-height: 21px;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+}
+footer li a:hover {
+    padding-left: 8px;
+}
+footer .bottomFooter {
+    margin-top: 20px;
+}
+footer .bottomFooter p {
+    margin-top: 20px;
+    font-size: 12px;
+    margin-bottom: 0;
+}
+footer .bottomFooter p a {
+    text-decoration: underline;
     color: #fff;
 }
