--- a/public/css/global.css
+++ b/public/css/global.css
@@ -232,6 +232,168 @@ textarea:focus, input:focus{
 .mobile .boxMenuMobile .langMobile .langItem.active {
     color: #DC3545;
 }
+.signInPage {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #0000008f;
+    left: 0;
+    top: 0;
+    z-index: 3;
+    display: none;
+}
+.signInPage .container-m {
+    max-width: 900px;
+}
+.signInPage .boxSignIn {
+    position: relative;
+    padding: 20px;
+    background: #fff;
+    border-radius: 10px;
+    margin-top: 60px;
+    box-shadow: 0 0 5px #464646;
+}
+.signInPage .boxSignIn .fa-xmark {
+    position: absolute;
+    right: 5px;
+    width: 30px;
+    height: 30px;
+    background: #fff;
+    border-radius: 50%;
+    padding: 7px;
+    text-align: center;
+    cursor: pointer;
+    top: 5px;
+    box-shadow: 0 0 5px #333;
+}
+.boxSignIn .boxTitle {
+    position: relative;
+    height: 46px;
+    width: 100%;
+    border-bottom: 1px solid #333;
+    margin-bottom: 20px;
+}
+.boxSignIn .boxTitle .tabs {
+    display: table;
+    margin: auto;
+}
+.boxSignIn .boxTitle .tabs .tab {
+    display: table-cell;
+    width: 150px;
+    text-align: center;
+    padding: 8px;
+    font-weight: 600;
+}
+.boxSignIn .boxTitle .tabs .tab:hover {
+    cursor: pointer;
+    color: #9C0B0B;
+}
+.boxSignIn .boxTitle .tabs .tab.active {
+    border-bottom: 1px solid #fff;
+    border-left: 1px solid #333;
+    border-right: 1px solid #333;
+    border-top: 5px solid #9C0B0B;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+.boxSignIn h3{
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 700;
+    color: #9C0B0B;
+}
+.boxSignIn .phoneBox {
+    display: table;
+    width: 100%;
+}
+.boxSignIn input[type='text'],
+.boxSignIn select {
+    height: 40px;
+    font-size: 16px;
+}
+.boxSignIn .subphone {
+    width: 100px;
+}
+.boxSignIn .phoneBoxLeft {
+    display: table-cell;
+    width: 120px;
+    vertical-align: middle;
+}
+.boxSignIn .phoneBoxRight {
+    display: table-cell;
+    vertical-align: middle;
+    padding-left: 10px;
+}
+.boxSignIn .capchar {
+    background: #d1d1d1;
+    padding: 8px;
+    border-radius: 5px;
+    text-align: center;
+    font-weight: 700;
+}
+.boxSignIn .btnSubmit {
+    display: block;
+    width: 100%;
+    border: 0;
+    background: #C30E0E;
+    color: #fff;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    padding: 10px;
+    margin-top: 20px;
+    border-radius: 5px;
+}
+.signinTab {
+    overflow: hidden;
+}
+.signupTab {
+    display: none;
+}
+.signinTab .or {
+    position: relative;
+    display: inline-block;
+    margin: 12px 0;
+}
+.signinTab .or:before {
+    position: absolute;
+    content: '';
+    height: 1px;
+    background: #444;
+    width: 500px;
+    right: 28px;
+    top: 12px;
+}
+.signinTab .or::after {
+    position: absolute;
+    content: '';
+    height: 1px;
+    background: #444;
+    width: 500px;
+    left: 28px;
+    top: 12px;
+}
+.signinTab .btnSocial {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 19px;
+    border: 1px solid #bbb;
+    border-radius: 5px;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+}
+.boxPassword {
+    padding: 50px 0px;
+}
+.boxPassword h3 {
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 32px; 
+    text-transform: uppercase;
+}
 /* #################### jumbotron ############################ */
 .jumbotron {
     background-image: url('../../public/image/9d995afdf01ffe6b80a994280ea7b125.jpg');
